--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,7 @@
         You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    <script type="text/javascript" src="../src/index.js"></script>
+    <script type="text/javascript" src="../src/index.jsx"></script>
 </body>
 
 </html>
